Fixed project description on image hover overflow on smaller screens

--- a/style.css
+++ b/style.css
@@ -447,13 +447,14 @@ img {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(36, 62, 206, 0.6);
+  background: rgba(36, 62, 206, 0.8);
   color: #fff;
   visibility: hidden;
   opacity: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: overlay;
 
   /* transition effect */
   transition: opacity 0.2s, visibility 0.2s;
@@ -468,6 +469,8 @@ img {
   padding: 10px;
   transition: 0.2s;
   transform: translateY(1em);
+  width: 100%;
+  height: 100%;
 }
 
 .img-title {
